<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quavii</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Login Activity-->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="version">Versión 1.0</string>
    <string name="login">Iniciando Sesion</string>
    <string name="ingresar">Ingresar</string>

    <!--For All-->
    <string name="img">IMAGEN</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="close">Salir</string>
    <string name="message">mensaje</string>
    <string name="title">Titulo</string>

    <!--Main Activity-->
    <string name="wait" tools:ignore="Typos">Espere un Momento</string>
    <string name="sync">Sincronizando</string>
    <string name="send">Enviando</string>
    <string name="failedConexion">Sin conexión a internet</string>
    <string name="conectado">Conectada</string>
    <string name="medidor">MEDIDOR :</string>
    <string name="contrato">CONTRATO :</string>
    <string name="direccion">Dirección :</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirm">Confirmar Lectura</string>
    <string name="save">Guardar</string>
    <string name="camera">Camara</string>
    <string name="search">Buscar Medidor</string>
    <string name="searchOperario">Buscar Operario</string>
    <string name="takePhoto">Tomar Foto</string>
    <string name="openGallery">Abrir Galeria</string>
    <string name="externo">Externo</string>
    <string name="interno">Interno</string>
    <string name="sotano">Sotano</string>
    <string name="azotea">Azotea</string>
    <string name="ingrese_lectura">Ingrese Lectura</string>
    <string name="client">Cliente :</string>
    <string name="orden">Orden :</string>
    <string name="codigo_de_observacion">Codigo de Observación :</string>
    <string name="lectura">Lectura :</string>
    <string name="observacion">Observacion :</string>
    <string name="resultado">Resultado :</string>

    <string name="buscar">Buscar Cliente</string>

    <string name="app_label"> Buscar Cliente</string>
    <string name="search_hint">Nombre o Apellido</string>
    <string name="search_view">Buscar Cliente</string>
    <string name="numero_constancia">Número de Constancia :</string>
    <string name="motivo">Motivo :</string>
    <string name="menu">Ir a Menu</string>
    <string name="clear">Limpiar</string>
    <string name="found">Suministro Encontrado</string>
    <string name="medidor2">Medidor :</string>
    <string name="contrato2">Contrato :</string>
    <string name="horario">Horario :</string>
    <string name="add">Agregar</string>
    <string name="enviar">Enviar</string>
    <string name="title_dialog_lectura">Eliga una Opción :</string>
    <string name="lecturas_normales">Lecturas Normales</string>
    <string name="lecturas_observadas">Lecturas Observadas</string>
    <string name="lecturas_manuales">Lecturas Manuales</string>
    <string name="subTitleLectura">(No serán efectivas)</string>
    <string name="inicioZonaPeligrosa">Inicio de zona peligrosa</string>
    <string name="terminoZonaPeligrosa">Fin de zona peligrosa</string>
    <string name="tapas_abiertas">Tapas Abiertas</string>
    <string name="reclamos">Reclamos</string>
    <string name="lecturas_recuperadas">Lectura Recuperadas</string>

    <string name="continuar">Continuar</string>
    <string name="TomarFoto">Click para tomar foto</string>
    <string name="codigoBarra">Codigo de barra o suministro </string>
    <string name="codigoManual">Ingrese número de Reparto o Codigo de barra</string>

    <string name="startWork">Inicio de Trabajo</string>
    <string name="endWork">Fin de Trabajo</string>
    <string name="repartoCode">Lista de Reparto</string>
    <string name="repartoManual">Reparto Manual</string>
    <string name="title_activity_maps">Map</string>
    <string name="salir">Salir</string>
    <string name="singin">Acceder</string>
    <string name="artefacto">Artefacto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="observation">Observación</string>
    <string name="tab1">General</string>
    <string name="tab2">Foto</string>
    <string name="tab3">Firma</string>
    <string name="tab4">Subir Archivos</string>
    <string name="check_one">Charla Pre Operacional, reconociendo previamente su zona de trabajo. Identificar los peligros y evaluar los riesgos, estableciendo las medidas de control vinculadas.</string>
    <string name="check_two">Revisar que los EPP, herramientas y otros medios de trabajos se encuentren en buen estado de conversación.</string>
    <string name="si">SI</string>
    <string name="title_menu">Menu Principal</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="descripcion">Descripción</string>
    <string name="area">Area</string>
    <string name="fecha">Fecha</string>
    <string name="m">M</string>
    <string name="b">B</string>
    <string name="operario">Operario</string>
    <string name="titulo_de_trabajo">Título de Trabajo</string>
    <string name="lugar">Lugar</string>
    <string name="hora">Hora</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="inicio_de_actividades">Inicio de Actividades</string>
    <string name="envio_de_pendientes">Envio de Pendientes</string>
    <string name="ver">Ver</string>
    <string name="deletePhoto">Eliminar Foto</string>
    <string name="ubicacion_del_medidor">Ubicación del Medidor</string>
    <string name="telefono">telefono</string>
    <string name="nota">nota</string>
    <string name="sincronizacion">Sincronización</string>
    <string name="fin_trabajo">FIN TRABAJO</string>
    <string name="my_direction">Mz D Lote 2 Venecia San Felipe</string>
    <string name="nro_recibo">Nro Recibo :</string>
    <string name="piso">Piso :</string>
    <string name="vivienda">Vivienda</string>
    <string name="otros">Otros :</string>
    <string name="color_fachada">Color/Fachada</string>
    <string name="puerta">Puerta</string>
    <string name="color_puerta">Color Puerta</string>
    <string name="recibido_por">Recibido por</string>
    <string name="dni">DNI :</string>
    <string name="parentesco">Parentesco :</string>
    <string name="devuelto">Devuelto :</string>
    <string name="otros_vivienda">Otros Vivienda</string>
    <string name="otros_color_fachada">Otros Color Fachada</string>
    <string name="otros_puerta">Otros Puerta</string>
    <string name="otros_color_puerta">Otros Color Puerta</string>
    <string name="causa">Causa</string>
    <string name="description_version">AppVeritas requiere de una nueva actualización</string>
    <string name="actualizar">Actualizar</string>
    <string name="content_permission">Debes de aceptar los permisos para poder acceder al aplicativo</string>
    <string name="wait_download">Espere mientras termina la descargar !</string>
    <string name="verificar_ficha">Verificar Ficha</string>
    <string name="codigo_emr">Codigo EMR:</string>
    <string name="enviar_ficha">Enviar Ficha</string>
    <string name="validar_emr">Validar EMR</string>
    <string name="de_mezcla_explosiva">% de mezcla explosiva</string>
    <string name="valor_del_mon_metro_de_presion_de_entrada">Valor del monémetro de Presion de Entrada</string>
    <string name="seleccione_marca_de_corrector">Seleccione marca de corrector</string>
    <string name="valor_de_volumen_sin_corregir_de_la_unidad_correctora">Valor de volumen sin corregir de la unidad correctora</string>
    <string name="valor_de_volumen_sin_corregir_del_medidor">Valor de volumen sin corregir del medidor</string>
    <string name="valor_de_volumen_registrado_de_la_unidad_correctora">Valor de volumen registrado de la unidad correctora</string>
    <string name="valor_de_la_presi_n_de_medicion_de_uc">Valor de la presión de medicion de UC</string>
    <string name="valor_de_la_temperatura_de_medici_n_de_la_uc">Valor de la temperatura de medición de la UC</string>
    <string name="tiempo_de_vida_de_la_bateria">Tiempo de vida de la bateria</string>
    <string name="foto_panoramica">Foto Panoramica</string>
    <string name="tiene_gabinete_de_temometria">Tiene Gabinete de temometria ?</string>
    <string name="presenta_cliente">Presenta Cliente ?</string>
    <string name="nombre_contacto">Nombre Contacto</string>
    <string name="registrar_ficha">Registrar Ficha</string>
    <string name="comentario">Comentario</string>
    <string name="responsable">Responsable :</string>
    <string name="precinto">Precinto</string>
</resources>