<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_settings"
            android:title="@string/inicio_de_actividades" />

        <item
            android:id="@+id/sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/sincronizacion" />
        <item
            android:id="@+id/envio"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/envio_de_pendientes" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>