<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.adapters.CheckListAdapter">

    <TextView
        android:id="@+id/textViewPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrincipal" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioNA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>