<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/title_dialog_lectura"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayoutNormales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="15sp"
            android:text="@string/lecturas_normales"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewCountNormales"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|end"
            android:background="@drawable/notification"
            android:gravity="center"
            android:text="500"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="gone"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutObservadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="15sp"
            android:text="@string/lecturas_observadas"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewCountObservadas"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|end"
            android:background="@drawable/notification"
            android:gravity="center"
            android:text="500"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="gone"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutReclamos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="15sp"
            android:text="@string/reclamos"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewCountReclamos"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|end"
            android:background="@drawable/notification"
            android:gravity="center"
            android:text="500"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="gone"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAceptar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:text="@string/close" />
</LinearLayout>